--- a/index.html
+++ b/index.html
@@ -26,59 +26,72 @@
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
-        <img class=banner-image src="images/banner.png" alt="" />
+        <img class="banner-image" src="images/banner.png" alt="" />
       </div>
     </header>
     <main>
       <!-- team section start -->
-        <section class="teams display-flex">
-            <div class="team-img-container">
-                <img src="images/team1.png" alt="two architect discussing about design">
-                <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
-            </div>
-            <div class="our-features">
-                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn-primary">Explore More</button>
-            </div>
-        </section>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img src="images/team1.png" alt="two architect discussing about design" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h3 class="section-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span>
+            <span>of Our</span>
+            <span class="text-primary">Features</span>
+          </h3>
+          <p class="feature-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
       <!-- features will enjoy -->
-       <section>
-          <h3 class="section-title">Some Facts</h3>
-          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-          <div class="facts-container">
-              <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
-               </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
-               </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
-               </div>
-               <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
-               </div>
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray fact-description">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name">Award Winning</h5>
+            </div>
           </div>
-       </section>
-       <!-- some facts -->
-        <section class="some-facts">
-
-        </section>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/projects.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name">Project Finished</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/customers.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clients Worked</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="images/icons/email.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">22578</h4>
+              <h5 class="fact-name">Email Send</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- some facts -->
+      <section class="some-facts"></section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
