--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
           <button class="btn-primary">Explore More</button>
         </div>
       </section>
-      <!-- features will enjoy -->
+      <!-- some facts -->
       <section>
         <h3 class="section-title">Some Facts</h3>
         <p class="text-light-gray fact-description">
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
-        </p>
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         <div class="facts-container">
           <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
           <div class="fact-card display-flex">
@@ -86,11 +85,25 @@
               <h4 class="fact-number">22578</h4>
               <h5 class="fact-name">Email Send</h5>
             </div>
-          </div>
+
         </div>
       </section>
       <!-- some facts -->
-      <section class="some-facts"></section>
+
+      <section class="our-sponsors">
+          <div class="sponsor-info">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+          </div>
+          <div class="sponsor-companies">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+          </div>
+      </section>
+
     </main>
     <footer></footer>
   </body>
