--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
 
         </div>
-        <div>
+        <div class="featured-architect">
           <img src="images/architect.png" alt="">
           <button id="experience-badge" class="btn-primary">
               <span id="experience-year">10+Year</span>
