added the footer section

--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
             <img src="images/sponsors/figma.png" alt="">
           </div>
       </section>
-
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <p class="copyright-container">All rights reserved copyright &copy;2023 startup landing page design</p>
+      </div>
+    </footer>
   </body>
 </html>
