--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
-        <img class="banner-image" src="images/banner.png" alt="" />
+        <img class="banner-image" src="images/banner.png" alt="">
       </div>
     </header>
     <main>
       <!-- team section start -->
       <section class="teams display-flex">
         <div class="team-img-container">
-          <img src="images/team1.png" alt="two architect discussing about design" />
-          <img src="images/team2.png" alt="" />
-          <img src="images/team3.png" alt="" />
-          <img src="images/team4.png" alt="" />
+          <img src="images/team1.png" alt="two architect discussing about design">
+          <img src="images/team2.png" alt="">
+          <img src="images/team3.png" alt="">
+          <img src="images/team4.png" alt="">
         </div>
         <div class="our-features">
           <h3 class="section-title">
@@ -60,19 +60,19 @@
 
           <!-- feature card container -->
           <div class="feature-card">
-            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
           </div>
           <div class="feature-card">
-            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
           </div>
           <div class="feature-card">
-            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
           </div>
           <div class="feature-card">
-            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
           </div>
 
@@ -96,36 +96,36 @@
           <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
           <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+              <img src="images/icons/ribon.png" alt="" class="fact-icon">
               <h4 class="fact-number">54</h4>
               <h5 class="fact-name">Award Winning</h5>
             </div>
           </div>
           <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/projects.png" alt="" class="fact-icon" />
+              <img src="images/icons/projects.png" alt="" class="fact-icon">
               <h4 class="fact-number">1458</h4>
               <h5 class="fact-name">Project Finished</h5>
             </div>
           </div>
           <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/customers.png" alt="" class="fact-icon" />
+              <img src="images/icons/customers.png" alt="" class="fact-icon">
               <h4 class="fact-number">590</h4>
               <h5 class="fact-name">Clients Worked</h5>
             </div>
           </div>
           <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/email.png" alt="" class="fact-icon" />
+              <img src="images/icons/email.png" alt="" class="fact-icon">
               <h4 class="fact-number">22578</h4>
               <h5 class="fact-name">Email Send</h5>
             </div>
-
+            </div>
         </div>
       </section>
-      <!-- some facts sponsor -->
 
+      <!-- some facts sponsor -->
       <section class="our-sponsors">
           <div class="sponsor-info">
             <h3 class="section-title">Our Sponsors</h3>
@@ -141,8 +141,8 @@
       </section>
     </main>
     <footer>
-      <div class="footer-container">
-        <p class="copyright-container">All rights reserved copyright &copy;2023 startup landing page design</p>
+      <div id="footer-container">
+        <p class="footer-content">All rights reserved copyright&copy;2023 startup landing page design</p>
       </div>
     </footer>
   </body>
